--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
 
+    <div class='face'>
+     <div class='eye right'></div>
+     <div class='eye left'></div>
+     <div class='mouth'></div>
+    </div>
+
 	<div class="box">
       <img src="assets/img/profile.jpg" alt="" class="box-img">
       <h1>ARSH SAHZAD</h1>
@@ -27,5 +33,7 @@
 	 <a class="btn" href="#"> <i class="fab fa-slack"></i></a>
 	   
 	</div> 
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+   	<script src="assets/js/main.js"></script>
   </body>
 </html>
