--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
 
+    <div class='face'>
+     <div class='eye right'></div>
+     <div class='eye left'></div>
+     <div class='mouth'></div>
+    </div>
+
 	<div class="box">
       <img src="assets/img/profile.jpg" alt="" class="box-img">
       <h1>ARSH SAHZAD</h1>
@@ -21,11 +27,11 @@
      <a class="btn" href="https://instagram.com/arshsahzad" target="_blank"> <i class="fab fa-instagram"></i></a>
 	 <a class="btn" href="https://linkedin.com/in/arshsahzad" target="_blank"> <i class="fab fa-linkedin"></i></a>
 	 <a class="btn" href="https://github.com/arshsahzad" target="_blank"> <i class="fab fa-github"></i></a>
-	 <a class="btn" href="https://gitlab.com/arshsahzad" target="_blank"> <i class="fab fa-gitlab"></i></a>
-	 <a class="btn" href="https://twitch.tv/arshsahzad" target="_blank"> <i class="fab fa-twitch"></i></a>
-     <a class="btn" href="#"> <i class="fab fa-whatsapp"></i></a>	  
-	 <a class="btn" href="#"> <i class="fab fa-slack"></i></a>
-	   
+	 <a class="btn" href="https://gitlab.com/arshsahzad" target="_blank"> <i class="fab fa-gitlab"></i></a>  
 	</div> 
+	
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script  src="assets/js/main.js"></script>
+	
   </body>
 </html>
