--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
 	<link rel="icon" type="image/ico" href="assets/img/profile.jpg" />
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+	//Floating Button
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	//End
+	
 	
   </head>
   <body>
-
+    
+    <div class="float-container">
+     <a href="#" class="icon one">Book now</a>
+     <a href="#" class="icon two">Get in touch</a>
+     <a href="#" class="icon three">Send us a message</a>
+    </div>
+	
     <div class='face'>
      <div class='eye right'></div>
      <div class='eye left'></div>
