--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<link rel="icon" type="image/ico" href="assets/img/profile.jpg" />
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-	//Floating Button
+	<!-- Side Floating Botton -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-	//End
+	<!-- End -->
 	
 	
   </head>
