--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Arsh Sahzad</title>
+    <title>Md Masooom Raja</title>
 	<link rel="icon" type="image/ico" href="assets/img/profile.jpg" />
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -29,16 +29,15 @@
 
 	<div class="box">
       <img src="assets/img/profile.jpg" alt="" class="box-img">
-      <h1>ARSH SAHZAD</h1>
-      <h5>Web Devloper - Web Designer</h5>
-      <p>Howdy, I’m Arsh. I’m a web developer living in New Delhi. I am a fan of technology, programming, and photography. I’m also interested in entrepreneurship and web development. If you’d like to get in touch, feel free to say hello through any of the social links below.</p>
+      <h1>MD MASOOM RAJA</h1>
+      <h5>Student * Cricketer</h5>
+      <p>Howdy, I’m Masoom. I’m a sportsman living in New Delhi. I am a fan of Modi 😉. I’m also interested in entrepreneurship and travelling. If you’d like to get in touch, feel free to say hello through any of the social links below.</p>
      
-     <a class="btn" href="https://www.facebook.com/arshsahzad" target="_blank"> <i class="fab fa-facebook-f"></i></a>
-     <a class="btn" href="https://twitter.com/arshsahzad" target="_blank"> <i class="fab fa-twitter"></i></a>
-     <a class="btn" href="https://instagram.com/arshsahzad" target="_blank"> <i class="fab fa-instagram"></i></a>
-	 <a class="btn" href="https://linkedin.com/in/arshsahzad" target="_blank"> <i class="fab fa-linkedin"></i></a>
-	 <a class="btn" href="https://github.com/arshsahzad" target="_blank"> <i class="fab fa-github"></i></a>
-	 <a class="btn" href="https://gitlab.com/arshsahzad" target="_blank"> <i class="fab fa-gitlab"></i></a>  
+     <a class="btn" href="https://www.facebook.com/reallmasoom" target="_blank"> <i class="fab fa-facebook-f"></i></a>
+     <a class="btn" href="https://twitter.com/realmasoom" target="_blank"> <i class="fab fa-twitter"></i></a>
+     <a class="btn" href="https://instagram.com/realmassom" target="_blank"> <i class="fab fa-instagram"></i></a>
+	 <a class="btn" href="https://linkedin.com/in/realmasoom" target="_blank"> <i class="fab fa-linkedin"></i></a>
+	 <a class="btn" href="https://github.com/realmasoom" target="_blank"> <i class="fab fa-github"></i></a> 
 	</div> 
 	
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
