--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Md Masooom Raja</title>
+    <title>Md Masoom Raja</title>
 	<link rel="icon" type="image/ico" href="assets/img/profile.jpg" />
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
