--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      
      <a class="btn" href="https://www.facebook.com/reallmasoom" target="_blank"> <i class="fab fa-facebook-f"></i></a>
      <a class="btn" href="https://twitter.com/realmasoom" target="_blank"> <i class="fab fa-twitter"></i></a>
-     <a class="btn" href="https://instagram.com/realmassom" target="_blank"> <i class="fab fa-instagram"></i></a>
+     <a class="btn" href="https://instagram.com/realmasoom" target="_blank"> <i class="fab fa-instagram"></i></a>
 	 <a class="btn" href="https://linkedin.com/in/realmasoom" target="_blank"> <i class="fab fa-linkedin"></i></a>
 	 <a class="btn" href="https://github.com/realmasoom" target="_blank"> <i class="fab fa-github"></i></a> 
 	</div> 
